--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,16 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - SlovaPozpatku",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "stopOnEntry": false,
+            "mainClass": "SlovaPozpatku",
+            "args": ""
+        }
+    ]
 }
